--- a/main.html
+++ b/main.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet" />
+    <link rel="stylesheet" href="main.css" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="main-container">
-
+      <div class="container">
+        <div class="search">
+          <input type="search" placeholder="search" />
+          <button><i class='bx bx-search-alt' style='color:#ff0000'  ></i></button>
+        </div>
+      </div>
     </div>
-
-</body>
+  </body>
 </html>
