--- a/main.html
+++ b/main.html
@@ -7,14 +7,21 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet" />
     <link rel="stylesheet" href="main.css" />
-    <title>Document</title>
+    <title>WeatherApp-Sa</title>
   </head>
   <body>
     <div class="main-container">
       <div class="container">
         <div class="search">
           <input type="search" placeholder="search" />
-          <button><i class='bx bx-search-alt' style='color:#ff0000'  ></i></button>
+          <button>
+            <i class="bx bx-search-alt" style="color: #000"></i>
+          </button>
+        </div>
+        <div class="weather">
+          <img src="images/clear.png" />
+          <h2>22°C</h2>
+          <h1>Gilgit</h1>
         </div>
       </div>
     </div>
