--- a/main.html
+++ b/main.html
@@ -28,7 +28,7 @@
             <img src="images/humidity.png" />
             <div>
               <p class="humidity">50%</p>
-              <p>humidity</p>
+              <p id="">humidity</p>
             </div>
           </div>
           <div class="col">
