--- a/main.html
+++ b/main.html
@@ -13,8 +13,8 @@
     <div class="main-container">
       <div class="container">
         <div class="search">
-          <input type="search" placeholder="search" />
-          <button>
+          <input id="userInput" type="search" placeholder="search" />
+          <button onclick="userValue()">
             <i class="bx bx-search-alt" style="color: #000"></i>
           </button>
         </div>
@@ -41,5 +41,8 @@
         </div>
       </div>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="app.js"></script>
   </body>
 </html>
