weather app complete

--- a/main.html
+++ b/main.html
@@ -13,22 +13,22 @@
     <div class="main-container">
       <div class="container">
         <div class="search">
-          <input id="userInput" type="search" placeholder="search" />
+          <input id="userInput" type="search" placeholder="Enter a city name" />
           <button onclick="userValue()">
             <i class="bx bx-search-alt" style="color: #000"></i>
           </button>
         </div>
         <div class="weather">
-          <img src="images/clear.png" />
-          <h2>22°C</h2>
-          <h1>Gilgit</h1>
+          <img id="weatherImg" src="images/clr.gif" />
+          <h2 id="temperature">22°C</h2>
+          <h1 id="cityName">Gilgit</h1>
         </div>
         <div class="details">
           <div class="col">
             <img src="images/humidity.png" />
             <div>
               <p class="humidity">50%</p>
-              <p id="">humidity</p>
+              <p>humidity</p>
             </div>
           </div>
           <div class="col">
