--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="main.css" />
     <title>WeatherApp-Sa</title>
-</head>
-<body>
+  </head>
+  <body>
+    <div class="animate-container">
+      <img src="images/umbrella-motvion-800x600-unscreen.gif" alt="" />
 
-    
-    
-</body>
+      <button onclick="changeIndex()">Check Weather</button>
+    </div>
+
+    <script src="app.js"></script>
+  </body>
 </html>
