--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
         <div class="weather">
           <img id="weatherImg" src="images/clr.gif" />
           <h2 id="temperature">22°C</h2>
-          <h1 id="cityName">Gilgit</h1>
+          <h1 id="cityName">GILGIT</h1>
         </div>
         <div class="details">
           <div class="col">
