--- a/main.html
+++ b/main.html
@@ -6,6 +6,8 @@
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet" />
+    <link rel="shortcut icon" href="images/sun.png" type="image/x-icon" />
+    <link rel="manifest" href="manifest.json" />
     <link rel="stylesheet" href="main.css" />
     <title>WeatherApp-Sa</title>
   </head>
@@ -41,6 +43,23 @@
         </div>
       </div>
     </div>
+
+    <script>
+      window.addEventListener("load", () => {
+        registerSW();
+      });
+
+      // Register the Service Worker
+      async function registerSW() {
+        if ("serviceWorker" in navigator) {
+          try {
+            await navigator.serviceWorker.register("serviceworker.js");
+          } catch (e) {
+            console.log("SW registration failed");
+          }
+        }
+      }
+    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="app.js"></script>
