Weather app with pwa complete

--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="main.css" />
     <title>WeatherApp-Sa</title>
   </head>
   <body>
     <div class="animate-container">
-      <img src="images/umbrella-motvion-800x600-unscreen.gif" alt="" />
+      <img src="images/umbrella-motvion-800x600-unscreen.gif" class="animate__animated animate__fadeInLeft" />
 
-      <button onclick="changeIndex()">Check Weather</button>
+      <button class="animate__animated animate__fadeInRight" onclick="changeIndex()">Check Weather</button>
     </div>
 
     <script src="app.js"></script>
