--- a/main.html
+++ b/main.html
@@ -7,13 +7,16 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet" />
     <link rel="shortcut icon" href="images/sun.png" type="image/x-icon" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="manifest" href="manifest.json" />
     <link rel="stylesheet" href="main.css" />
     <title>WeatherApp-Sa</title>
   </head>
   <body>
     <div class="main-container">
-      <div class="container">
+      <div class="container animate__animated animate__fadeInDown">
         <div class="search">
           <input id="userInput" type="search" placeholder="Enter a city name" />
           <button onclick="userValue()">
