--- a/index.html
+++ b/index.html
@@ -7,13 +7,20 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="main.css" />
-    <title>WeatherApp-Sa</title>
+    <title>Weather_App-Sa</title>
   </head>
   <body>
     <div class="animate-container">
-      <img src="images/umbrella-motvion-800x600-unscreen.gif" class="animate__animated animate__fadeInLeft" />
+      <img
+        src="images/umbrella-motvion-800x600-unscreen.gif"
+        class="animate__animated animate__fadeInLeft" />
 
-      <button class="animate__animated animate__fadeInRight" onclick="changeIndex()">Check Weather</button>
+      <button
+        class="animate__animated animate__fadeInRight"
+        onclick="changeIndex()">
+        Check Weather
+        <img src="images/fast-forward.gif" alt="" />
+      </button>
     </div>
 
     <script src="app.js"></script>
