weather app complete with pwa

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+      <link rel="shortcut icon" href="images/sun.png" type="image/x-icon" />
     <link rel="stylesheet" href="main.css" />
     <title>Weather_App-Sa</title>
   </head>
