Weather app with pwa complete

--- a/main.html
+++ b/main.html
@@ -7,6 +7,9 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet" />
     <link rel="shortcut icon" href="images/sun.png" type="image/x-icon" />
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
@@ -24,6 +27,7 @@
           </button>
         </div>
         <div class="weather">
+          <!-- <p id="timeDate">11:23</p> -->
           <img id="weatherImg" src="images/clr.gif" />
           <h2 id="temperature">22°C</h2>
           <h1 id="cityName">GILGIT</h1>
